# open-data-insights

./: .gitignore  CHANGELOG.md  ETL_MIGRATION_GUIDE.md  Procfile  data_news.dump  deploy.sh  heroku_postgres.md  manage.py  postgres_2025_06_13.dump  postgres_2025_06_14.dump  pyproject.toml  readme.md  release.py  requirements.txt  story_templates.md  test.md  test.py
.backup/: postgres_2025_06_12.dump
.claude/: settings.json
account/: admin.py  forms.py  models.py  urls.py  views.py
base/: utils.py
daily_tasks/: data_news.py  make_data_insights.py  send_data_insights.py  sql_templates.py  synch_datasets.py  utils.py
daily_tasks_obsolete/: data_news.py  make_data_insights.py  make_station_file.py  send_data_insights.py  utils.py
db_init/: dataset.csv  lookupvalue.csv
documentation/: etl_process.md  insight_template.md  insights.md
files/: 100051.csv  100051_agg.parquet  100057.csv  100057_agg.parquet  100078.csv  100078_agg.parquet  100089.csv  100089_agg.parquet  100231_agg.parquet  100232_agg.parquet  100233.csv  100233_agg.parquet  100254.csv  100254_agg.parquet  100259_agg.parquet  100302.csv  100302_agg.parquet  quotes.csv
report_generator/: admin.py  db.sqlite3  settings.py  settings_debug.py  tasks.py  urls.py  urls.py (or your main urls.py)
reports/: admin.py  apps.py  context_processors.py  feeds.py  forms.py  language.py  middleware.py  models.py  signals.py  sitemaps.py  taxonomy_utils.py  test_focus_images.py  test_publish_story_images.py  tests.py  urls.py  utils.py  views.py
templates/: about.html  base.html  home.html  navbar.html  (+1 more)
(+326 files in other folders)
