[project]
name = "open-data-insights"
version = "0.1.3"
description = "Open Data Insights Django application"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=4.2,<5.0",
  "altair",
  "beautifulsoup4",
  "boto3",
  "crispy_bootstrap5",
  "dj-database-url",
  "django-countries",
  "django-crispy-forms",
  "django-markdownify",
  "django-storages",
  "django-widget-tweaks==1.5.0",
  "gunicorn",
  "iommi",
  "markdown",
  "markdown2",
  "numpy",
  "openai",
  "pandas",
  "pillow",
  "psycopg2-binary>=2.9",
  "pyarrow",
  "python-decouple",
  "python-dotenv>=1.0",
  "requests",
  "shapely",
  "sqlalchemy",
  "whitenoise",
  "wordcloud==1.9.4",
]

[tool.uv]
package = false
